api for datastreams
